tests/syntax/bad/testfile-expr3-1.c
#include <stdbool.h>
#include <stdlib.h>
#include <stdio.h>
void f() { 0 <> 0; }
